Adjusted carousel bottom control sizes. Increased button sizes for small+ screens and fixed play-toggle jumping down on mobile when carousel is paused.

--- a/src/assets/styles/modules/_carousel.css
+++ b/src/assets/styles/modules/_carousel.css
@@ -356,12 +356,12 @@ $carousel__slide-speed: 1000ms;
     position: relative;
     display: inline-block;
     /*structure*/
-    height: 10px;
-    width: 10px;
+    height: 14px;
+    width: 14px;
     /*borders*/
     border-radius: 50%;
     /*spacing*/
-    margin-right: 8px;
+    margin-right: 14px;
     /*colors*/
     background-color: $carousel__control-color;
     /*transition*/
@@ -373,12 +373,12 @@ $carousel__slide-speed: 1000ms;
       background-color: $carousel__control-color--hover;
     }
 
-    @mixin forTiny {
+    @mixin atSmall {
       /*structure*/
-      height: 14px;
-      width: 14px;
+      height: 12px;
+      width: 12px;
       /*spacing*/
-      margin-right: 14px;
+      margin-right: 12px;
     }
 
   }
@@ -397,19 +397,20 @@ $carousel__slide-speed: 1000ms;
     /*mixins*/
     @mixin overrideButton();
     /*display*/
-    display: inline-block;
+    display: block;
     /*position*/
+    float: right;
     position: relative;
-    top: 3px;
+    top: 0;
     /*structure*/
     height: 16px;
     width: 16px;
     /*spacing*/
     margin-left: 5px;
-
+    margin-top: 1px;
     @mixin forTiny {
       /*position*/
-      top: 2px;
+      top: -2px;
       /*structure*/
       height: 18px;
       width: 18px;
@@ -430,18 +431,18 @@ $carousel__slide-speed: 1000ms;
       display: block;
       /*position*/
       position: absolute;
-      top: -8px;
-      left: -6px;
+      top: -11px;
+      left: -9px;
       /*structure*/
       height: 0;
       width: 0;
       /*borders*/
       border-style: solid;
-      border-width: 8px;
+      border-width: 11px;
       /*spacing*/
       margin-left: 0;
       /*transform*/
-      transform: scaleY(.7) rotate(45deg);
+      transform: scaleY(.6) rotate(45deg);
       /*colors*/
       border-left-color: transparent;
       border-top-color: $carousel__control-color;
